--- a/SecureWalk/src/app/components/ruta/insertareditarruta/insertareditarruta.component.html
+++ b/SecureWalk/src/app/components/ruta/insertareditarruta/insertareditarruta.component.html
@@ -51,10 +51,10 @@
 
       <div class="form-actions">
         <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">
-          Accept
+          Acceptar
         </button>
         <button mat-raised-button color="warn" (click)="cancelar()" type="button">
-          Cancel
+          Cancelar
         </button>
       </div>
     </form>
